# tab-manager-server

./: .gitignore  changelog.md  pyproject.toml
tab_manager/: main.py
tab_manager/cli/: __init__.py
